# rust-dishes-app

./: Cargo.toml  README.md
src/: adapter.rs  driver.rs  lib.rs  main.rs
src/adapter/: repository.rs
src/adapter/model/: dishes.rs
src/adapter/persistence/: database.rs
src/adapter/repository/: dishes.rs
src/domain/model/: dishes.rs
src/driver/: config.rs  error.rs
src/driver/model/: dishes.rs
src/driver/routes/: menu.rs
