[package]
name = "dishes-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = "1.1.2"
dotenv = "0.15.0"
async-std = "1.12.0"
derive_more = "0.99.18"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
ntex = { version = "2.0", features = ["tokio"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }

[dev-dependencies]
rstest = "0.21.0"
claim = "0.5.0"